--- a/ks.conf
+++ b/ks.conf
@@ -1,5 +1,5 @@
-hostname = nebula.kuaishou.com
+hostname = ug-fission.kuaishou.com
 
 
 
-https://nebula.kuaishou.com/rest/n/nebula/activity/earn/overview/basicInfo url script-request-header https://raw.githubusercontent.com/liuqi6968/-/main/ks_js.js
+https://ug-fission.kuaishou.com/rest/n/darwin/orchard/water/watering url script-request-header https://raw.githubusercontent.com/liuqi6968/-/main/ks_js.js
