--- a/mt.conf
+++ b/mt.conf
@@ -3,4 +3,4 @@ hostname = mall.meituan.com
 //get token
 
 
-^https://mall.meituan.com/api/c/mallcoin/game/fruit/waterTree url script-request-header mtmc_getToken.js
+^https://mall.meituan.com/api/c/mallcoin/game/fruit/waterTree url script-request-header https://raw.githubusercontent.com/passerby-b/mt_fruit/main/mtmc_getToken.js
